--- a/star-wars/appsettings.json
+++ b/star-wars/appsettings.json
@@ -6,5 +6,22 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Log4NetCore": {
+    "PropertyOverrides": [
+      {
+        "XPath": "/log4net/root/level",
+        "Attributes": {
+          "value": "ALL"
+          //"value": "DEBUG"
+          //"value": "INFO"
+          //"value": "WARN"
+          //"value": "ERROR"
+          //"value": "FATAL"
+          //"value": "OFF"
+        }
+      }
+    ]
+  }
 }
