--- a/star-wars/log4net.config
+++ b/star-wars/log4net.config
@@ -15,7 +15,7 @@
 		</layout>
 	</appender>
 	<root>
-		<level value="ALL"/>
+		<level value="DEBUG"/>
 		<appender-ref ref="DebugAppender" />
 		<appender-ref ref="RollingFile" />
 	</root>
