Deleted log4net Added NLog Added ObjectNotFoundException

--- a/star-wars/appsettings.json
+++ b/star-wars/appsettings.json
@@ -1,27 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Trace",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*",
-
-  "Log4NetCore": {
-    "PropertyOverrides": [
-      {
-        "XPath": "/log4net/root/level",
-        "Attributes": {
-          "value": "ALL"
-          //"value": "DEBUG"
-          //"value": "INFO"
-          //"value": "WARN"
-          //"value": "ERROR"
-          //"value": "FATAL"
-          //"value": "OFF"
-        }
-      }
-    ]
-  }
+  "AllowedHosts": "*"
 }
