--- a/star-wars/star-wars.csproj
+++ b/star-wars/star-wars.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -6,10 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="log4net" Version="2.0.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="5.0.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+	  <PackageReference Include="NLog" Version="4.7.10" />
+	<PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
+	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
+	
   </ItemGroup>
 
 </Project>
