--- a/star-wars/nlog.config
+++ b/star-wars/nlog.config
@@ -2,8 +2,10 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Info"
-      internalLogFile="c:\temp\internal-nlog-AspNetCore.txt">
+      internalLogLevel="Debug"
+      internalLogFile="c:\temp\internal-nlog-AspNetCore.txt"
+	  internalLogToConsole="true"
+      throwConfigExceptions="true">
 
   <!-- enable asp.net core layout renderers -->
   <extensions>
