--- a/star-wars/star-wars.csproj
+++ b/star-wars/star-wars.csproj
@@ -8,7 +8,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.7" />
     <PackageReference Include="Microsoft.Extensions.Logging.Log4Net.AspNetCore" Version="5.0.3" />
-	  <PackageReference Include="NLog" Version="4.7.10" />
+	<PackageReference Include="NLog" Version="4.7.10" />
+	<PackageReference Include="NLog.Schema" Version="4.7.10" />
 	<PackageReference Include="NLog.Web.AspNetCore" Version="4.12.0" />
 	<PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
 	
